--- a/tunaiku.ipynb
+++ b/tunaiku.ipynb
@@ -495,7 +495,7 @@
     "from google.cloud import bigquery\n",
     "\n",
     "client = bigquery.Client()\n",
-    "pandas_gbq.to_gbq(output_details,project_id=\"koinworks-dwh-prod\",destination_table=\"afpi_out_result.output_details\",  \n",
+    "pandas_gbq.to_gbq(output_details,project_id=\"zz\",destination_table=\"xx\",  \n",
     "                  if_exists='overwrite', credentials=client,\n",
     "                 table_schema=[{'name': 'email_user', 'type': 'STRING'},\n",
     "                               {'name': 'email', 'type': 'STRING'}\n",
